# Smart-Forms

./: .env.example  .gitignore  GETTING_STARTED.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Dashboard.tsx
frontend/src/components/dashboard/: BuyCreditsModal.tsx  ConnectFormModal.tsx  ConnectedFormsList.tsx  CreditsCard.tsx  FormAnalysisView.tsx  QuickStats.tsx  RecentActivity.tsx  SubmissionDetailView.tsx  TopNav.tsx
frontend/src/components/landing/: AnalysisMockup.tsx  CTA.tsx  DashboardMockup.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Logo.tsx  MobileDashboardPreview.tsx  MobileHero.tsx  PlagiarismMockup.tsx  Problem.tsx  (+1 more)
frontend/src/pages/: Dashboard.tsx  FormAnalysis.tsx  LandingPage.tsx  Login.tsx
infrastructure/database/: schema.sql
infrastructure/k8s/: api-gateway.yaml  ingress.yaml  namespace.yaml
infrastructure/nginx/: nginx.conf
scripts/: README.md  add_user_fields.py  init_db.py
services/ai-detection/: Dockerfile
services/api-gateway/: Dockerfile  auth.py  config.py  database.py  main.py  models.py  requirements.txt
services/file-processing/: Dockerfile
services/forms-service/: Dockerfile  go.mod  go.sum  main.go
services/notification-service/: Dockerfile
services/plagiarism-service/: .cargo-ok  Cargo.toml  Dockerfile
services/plagiarism-service/src/: main.rs  similarity.rs  tfidf.rs
services/ranking-service/: Dockerfile
