[package]
name = "plagiarism-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
redis = { version = "0.24", features = ["tokio-comp"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
rayon = "1.8"
unicode-segmentation = "1.10"
rust-stemmers = "1.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "similarity_benchmark"
harness = false
